add recipes and photos

--- a/recipes/eggs.html
+++ b/recipes/eggs.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>carbonera</title>
+    <title>eggs</title>
 </head>
 <body>
-    <h1>carbonera</h1>
-    <img src="photo_carb.jpeg">
-    <p>you do stuff with sphaggethi</p>
+    <h1>eggs</h1>
+    <img src="crispy-fried-egg-recipe.jpg">
+    <p>you do stuff with eggs</p>
     <ul>
-        <li>spaghetti</li>
-        <li>egg</li>
-        <li>parmesan</li>
+        <li>eggs</li>
+        <li>bacon</li>
+        <li>onion</li>
     </ul>
     <ol>
         <li>do stuff</li>
