--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Odin recipes</h1>
     <a href="recipes/carbonera.html">carbonera</a>
-    <a href="recipes/carbonera.html">eggs</a>
+    <a href="recipes/eggs.html">eggs</a>
 </body>
 </html>
